--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ class="cover d-flex justify-content-center align-items-center flex-column"
  <section>
   <div class="caver">
     <a
-      href="https://maps.app.goo.gl/P4sS6pjuiz7k893G6"
+      href="https://albertomarin3345.github.io/formulario2024/"
       class="btn btn-primary"
       ><b>Ir al formulario</b></a>
 </div>
